--- a/02_cvpr_2018/02_generate_raw_text_from_abstracts.ipynb
+++ b/02_cvpr_2018/02_generate_raw_text_from_abstracts.ipynb
@@ -7,7 +7,11 @@
    "outputs": [],
    "source": [
     "import io\n",
-    "\n",
+    "import glob\n",
+    "import re\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "from tqdm import tqdm\n",
     "from pdfminer.pdfinterp import PDFResourceManager, PDFPageInterpreter\n",
     "from pdfminer.converter import TextConverter\n",
     "from pdfminer.layout import LAParams\n",
@@ -26,7 +30,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "#pdf_file = 'papers/Zuffi_Lions_and_Tigers_CVPR_2018_paper.pdf'\n",
@@ -56,14 +62,10 @@
     "    fp.close()\n",
     "    device.close()\n",
     "    retstr.close()\n",
-    "    return text\n",
+    "    \n",
+    "    return ' '.join(text.split('\\n')).replace('- ','')\n",
     "\n",
-    "text = ' '.join(convert_pdf_to_txt(pdf_file).split('\\n')).replace('- ','')\n",
-    "\n",
-    "# TODO: it should be enough to get what's in between abstract and 1. Introduction, but sometimes\n",
-    "# specially if there is a figure at the beginning, this may not work. \n",
-    "# For each pdf extract what it is between abstract and introduction, and take a look at the distribution\n",
-    "# of the length of abstracts to detect weird cases\n",
+    "text = convert_pdf_to_txt(pdf_file)\n",
     "\n",
     "text"
    ]
@@ -73,7 +75,80 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "to_delete = [\n",
+    "    'papers/Chen_Robust_Video_content_cvpr_2018_paper.pdf', # Broken link\n",
+    "    'papers/Groueix_A_Papier-Mache_Approach_CVPR_2018_paper.pdf', # Broken link\n",
+    "    'papers/Liu_Exploring_Disentangled_Feature_CVPR_2018_paper.pdf' # The parser gets stuck\n",
+    "    ]\n",
+    "## Manually deleting some papers \n",
+    "for d in to_delete:\n",
+    "    if os.path.exists(d):\n",
+    "        os.remove(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# TODO: modify this to extract the whole text, not only the abstract\n",
+    "# then extract the abstract from the whole text later on\n",
+    "\n",
+    "# Extract the abstract as raw text\n",
+    "papers = sorted(glob.glob('papers/*.pdf')) # Sorting alphabetically makes\n",
+    "                                           # debugging easier\n",
+    "lens = []\n",
+    "\n",
+    "if not os.path.exists('data/'):\n",
+    "    os.makedirs('data/')\n",
+    "\n",
+    "for i in tqdm(range(len(papers))):\n",
+    "    paper = papers[i]\n",
+    "    output_file = os.path.join('data/', os.path.basename(paper)).replace('.pdf', '.txt')\n",
+    "    if not os.path.exists(output_file):\n",
+    "        text = convert_pdf_to_txt(paper)\n",
+    "        try:\n",
+    "            # We are assuming that the abstract corresponds to the portion of text between\n",
+    "            # the 'Abstract' and '1. Introduction' substrings. \n",
+    "            abstract = re.search('Abstract(.*)1\\. Introduction', text).group(1).strip()\n",
+    "        except AttributeError:\n",
+    "            # In case we cannot find an Abstract - 1. Introduction sequence\n",
+    "            abstract = ''\n",
+    "\n",
+    "        lens.append(len(abstract))\n",
+    "        with open(output_file, 'w') as f:\n",
+    "            f.write(abstract)\n",
+    "    else:\n",
+    "        with open(output_file, 'r') as f:\n",
+    "            abstract = f.readlines()\n",
+    "        lens.append(len(abstract))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: create a dataframe with papers and lens\n",
+    "paper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: it should be enough to get what's in between abstract and 1. Introduction, but sometimes\n",
+    "# specially if there is a figure at the beginning, this may not work. \n",
+    "# For each pdf extract what it is between abstract and introduction, and take a look at the distribution\n",
+    "# of the length of abstracts to detect weird cases"
+   ]
   }
  ],
  "metadata": {
