feat: parse PDFs to produce raw text data

--- a/02_cvpr_2018/02_generate_raw_text_from_abstracts.ipynb
+++ b/02_cvpr_2018/02_generate_raw_text_from_abstracts.ipynb
@@ -79,6 +79,7 @@
     "to_delete = [\n",
     "    'papers/Chen_Robust_Video_content_cvpr_2018_paper.pdf', # Broken link\n",
     "    'papers/Groueix_A_Papier-Mache_Approach_CVPR_2018_paper.pdf', # Broken link\n",
+    "    'papers/Larsson_Beyond_Grobner_Bases_CVPR_2018_paper.pdf', # Broken link\n",
     "    'papers/Liu_Exploring_Disentangled_Feature_CVPR_2018_paper.pdf' # The parser gets stuck\n",
     "    ]\n",
     "## Manually deleting some papers \n",
@@ -91,41 +92,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "# TODO: modify this to extract the whole text, not only the abstract\n",
-    "# then extract the abstract from the whole text later on\n",
-    "\n",
-    "# Extract the abstract as raw text\n",
+    "# Extract the raw text from the papers\n",
     "papers = sorted(glob.glob('papers/*.pdf')) # Sorting alphabetically makes\n",
     "                                           # debugging easier\n",
-    "lens = []\n",
-    "\n",
-    "if not os.path.exists('data/'):\n",
-    "    os.makedirs('data/')\n",
-    "\n",
+    "    \n",
     "for i in tqdm(range(len(papers))):\n",
     "    paper = papers[i]\n",
     "    output_file = os.path.join('data/', os.path.basename(paper)).replace('.pdf', '.txt')\n",
     "    if not os.path.exists(output_file):\n",
     "        text = convert_pdf_to_txt(paper)\n",
     "        try:\n",
-    "            # We are assuming that the abstract corresponds to the portion of text between\n",
-    "            # the 'Abstract' and '1. Introduction' substrings. \n",
-    "            abstract = re.search('Abstract(.*)1\\. Introduction', text).group(1).strip()\n",
-    "        except AttributeError:\n",
-    "            # In case we cannot find an Abstract - 1. Introduction sequence\n",
-    "            abstract = ''\n",
-    "\n",
-    "        lens.append(len(abstract))\n",
-    "        with open(output_file, 'w') as f:\n",
-    "            f.write(abstract)\n",
-    "    else:\n",
-    "        with open(output_file, 'r') as f:\n",
-    "            abstract = f.readlines()\n",
-    "        lens.append(len(abstract))"
+    "            with open(output_file, 'w') as f:\n",
+    "                f.write(text)\n",
+    "        except:\n",
+    "            os.remove(output_file)"
    ]
   },
   {
@@ -134,8 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: create a dataframe with papers and lens\n",
-    "paper"
+    "# TODO: create a dataframe with papers and lens, distribution of lens, analysis of outliers"
    ]
   },
   {
