feat: clusters evaluation

--- a/02_cvpr_2018/03_bag_of_word_analysis.ipynb
+++ b/02_cvpr_2018/03_bag_of_word_analysis.ipynb
@@ -9,6 +9,7 @@
     "%matplotlib inline\n",
     "\n",
     "import glob\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.cm as cm\n",
@@ -16,6 +17,7 @@
     "from sklearn.decomposition import LatentDirichletAllocation\n",
     "from sklearn.manifold import TSNE\n",
     "from sklearn.cluster import KMeans\n",
+    "from sklearn.metrics import silhouette_samples, silhouette_score\n",
     "from sklearn.cluster import DBSCAN"
    ]
   },
@@ -163,8 +165,41 @@
    "source": [
     "fig, ax = plt.subplots()\n",
     "ax.scatter(X_embedded[:,0], X_embedded[:,1], c = kmeans.labels_, cmap=\"gist_rainbow\")\n",
+    "i = 0\n",
+    "for c in kmeans.cluster_centers_:\n",
+    "    plt.annotate(\n",
+    "        str(i),\n",
+    "        xy=(c[0], c[1]), xytext=(0,0),\n",
+    "        textcoords='offset points', ha='center', va='center',\n",
+    "        bbox=dict(boxstyle='round,pad=0.5', fc='white', alpha=0.5))\n",
+    "    i = i + 1\n",
     "fig.set_figwidth(16)\n",
     "fig.set_figheight(16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Overall clustering score\n",
+    "silhouette_score(X_embedded, kmeans.labels_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Silhouette score per sample\n",
+    "# User to calculate the mean silouette score for each cluster\n",
+    "scores = silhouette_samples(X_embedded, kmeans.labels_)\n",
+    "df_scores = df.copy()\n",
+    "df_scores['label'] = kmeans.labels_\n",
+    "df_scores['shil'] = scores\n",
+    "df_scores.groupby('label').mean().sort_values(by='shil', ascending=False)"
    ]
   },
   {
@@ -191,8 +226,44 @@
    "source": [
     "fig, ax = plt.subplots()\n",
     "ax.scatter(X_embedded[:,0], X_embedded[:,1], c = dbscan.labels_, cmap=\"gist_rainbow\")\n",
+    "\n",
+    "labels = np.unique(dbscan.labels_).tolist()\n",
+    "\n",
+    "for i in range(len(labels)):\n",
+    "    center = [np.mean(X_embedded[dbscan.labels_ == labels[i], 0]), \n",
+    "              np.mean(X_embedded[dbscan.labels_ == labels[i], 1])]\n",
+    "    plt.annotate(\n",
+    "        str(labels[i]),\n",
+    "        xy=(center[0], center[1]), xytext=(0,0),\n",
+    "        textcoords='offset points', ha='center', va='center',\n",
+    "        bbox=dict(boxstyle='round,pad=0.5', fc='white', alpha=0.5))\n",
     "fig.set_figwidth(16)\n",
     "fig.set_figheight(16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Overall clustering score\n",
+    "silhouette_score(X_embedded, dbscan.labels_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Silhouette score per sample\n",
+    "# User to calculate the mean silouette score for each cluster\n",
+    "scores = silhouette_samples(X_embedded, dbscan.labels_)\n",
+    "df_scores = df.copy()\n",
+    "df_scores['label'] = dbscan.labels_\n",
+    "df_scores['shil'] = scores\n",
+    "df_scores.groupby('label').mean().sort_values(by='shil', ascending=False)"
    ]
   },
   {
