feat: clustering model selection

--- a/02_cvpr_2018/03_bag_of_word_analysis.ipynb
+++ b/02_cvpr_2018/03_bag_of_word_analysis.ipynb
@@ -13,6 +13,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.cm as cm\n",
+    "from tqdm import tqdm\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.decomposition import LatentDirichletAllocation\n",
     "from sklearn.manifold import TSNE\n",
@@ -154,7 +155,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " kmeans = KMeans(n_clusters=30, random_state=0).fit(X_embedded)"
+    "# Model selection\n",
+    "RANGE_K = range(2, 100)\n",
+    "best_kmeans = None\n",
+    "max_shil = -1\n",
+    "shils = []\n",
+    "for k in tqdm(RANGE_K):\n",
+    "    kmeans = KMeans(n_clusters=k, random_state=0).fit(X_embedded)\n",
+    "    shil = silhouette_score(X_embedded, kmeans.labels_)\n",
+    "    shils.append(shil)\n",
+    "    if shil > max_shil:\n",
+    "        max_shil = shil\n",
+    "        best_kmeans = kmeans\n",
+    "kmeans = best_kmeans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(RANGE_K, shils)"
    ]
   },
   {
@@ -212,10 +235,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "dbscan = DBSCAN(eps=1, min_samples=5).fit(X_embedded)"
+    "RANGE_EPS = np.arange(0.01, 5, 0.01)\n",
+    "RANGE_MIN_SAMPLES = range(3,50)\n",
+    "parameters = []\n",
+    "for eps in RANGE_EPS:\n",
+    "    for min_samples in RANGE_MIN_SAMPLES:\n",
+    "        parameters.append([eps, min_samples])\n",
+    "\n",
+    "best_dbscan = None\n",
+    "max_shil = -1\n",
+    "shils = []\n",
+    "for i in tqdm(range(len(parameters))):\n",
+    "    dbscan = DBSCAN(eps=parameters[i][0], min_samples=parameters[i][1]).fit(X_embedded)\n",
+    "    if len(np.unique(dbscan.labels_).tolist()) > 1:\n",
+    "        shil = silhouette_score(X_embedded, dbscan.labels_)\n",
+    "        shils.append(shil)\n",
+    "        if shil > max_shil:\n",
+    "            max_shil = shil\n",
+    "            best_dbscan = dbscan\n",
+    "    else:\n",
+    "        shils.append(-1)\n",
+    "dbscan = best_dbscan"
    ]
   },
   {
@@ -230,13 +275,14 @@
     "labels = np.unique(dbscan.labels_).tolist()\n",
     "\n",
     "for i in range(len(labels)):\n",
-    "    center = [np.mean(X_embedded[dbscan.labels_ == labels[i], 0]), \n",
-    "              np.mean(X_embedded[dbscan.labels_ == labels[i], 1])]\n",
-    "    plt.annotate(\n",
-    "        str(labels[i]),\n",
-    "        xy=(center[0], center[1]), xytext=(0,0),\n",
-    "        textcoords='offset points', ha='center', va='center',\n",
-    "        bbox=dict(boxstyle='round,pad=0.5', fc='white', alpha=0.5))\n",
+    "    if labels[i] != -1:\n",
+    "        center = [np.mean(X_embedded[dbscan.labels_ == labels[i], 0]), \n",
+    "                  np.mean(X_embedded[dbscan.labels_ == labels[i], 1])]\n",
+    "        plt.annotate(\n",
+    "            str(labels[i]),\n",
+    "            xy=(center[0], center[1]), xytext=(0,0),\n",
+    "            textcoords='offset points', ha='center', va='center',\n",
+    "            bbox=dict(boxstyle='round,pad=0.5', fc='white', alpha=0.5))\n",
     "fig.set_figwidth(16)\n",
     "fig.set_figheight(16)"
    ]
