feat: final version of the machine learning steps notebook

--- a/02_cvpr_2018/03_bag_of_word_analysis.ipynb
+++ b/02_cvpr_2018/03_bag_of_word_analysis.ipynb
@@ -15,7 +15,7 @@
     "import matplotlib.cm as cm\n",
     "from tqdm import tqdm\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.decomposition import LatentDirichletAllocation\n",
+    "from sklearn.decomposition import TruncatedSVD\n",
     "from sklearn.manifold import TSNE\n",
     "from sklearn.cluster import KMeans\n",
     "from sklearn.metrics import silhouette_samples, silhouette_score\n",
@@ -26,12 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook we will run a simple bag of word analysis of the papers:\n",
-    "\n",
-    "- Extract a bag of words representation of the papers\n",
-    "- Cluster papers\n",
-    "- Visualisation of the clustered labels\n",
-    "- Manually annotating each cluster to identify research topics in CVPR"
+    "In this notebook I practice with the different elements of what I will put together as a pipeline to provide me with a categorisation of CVPR 2018 papers. The process will be based on representing the papers by means of a bag of words approach."
    ]
   },
   {
@@ -75,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "count_vect = TfidfVectorizer(input='filename')\n",
+    "count_vect = TfidfVectorizer(input='filename', max_df = 0.7, min_df = 0.3)\n",
     "X_freq = count_vect.fit_transform(papers)\n",
     "X_freq.shape"
    ]
@@ -102,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## LDA"
+    "## LSA"
    ]
   },
   {
@@ -111,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#X_lda = LatentDirichletAllocation(n_components = 10).fit_transform(X_freq)"
+    "X_lsa = TruncatedSVD(n_components=15, random_state=0).fit_transform(X_freq)"
    ]
   },
   {
@@ -127,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_embedded = TSNE(n_components=2).fit_transform(X_freq.toarray())"
+    "X_embedded = TSNE(n_components=2).fit_transform(X_lsa)"
    ]
   },
   {
@@ -198,6 +193,23 @@
     "    i = i + 1\n",
     "fig.set_figwidth(16)\n",
     "fig.set_figheight(16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "for i in np.unique(kmeans.labels_.tolist()):\n",
+    "    indexes = np.where(kmeans.labels_ == i)\n",
+    "    papers_cluster = np.array(papers)[indexes].tolist()\n",
+    "    print('CLUSTER ' + str(i))\n",
+    "    for p in papers_cluster:\n",
+    "        print('   ' + p.replace('data/', ''))\n",
+    "    print('=====================')"
    ]
   },
   {
@@ -310,6 +322,19 @@
     "df_scores['label'] = dbscan.labels_\n",
     "df_scores['shil'] = scores\n",
     "df_scores.groupby('label').mean().sort_values(by='shil', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "I am ready to put all of this together into a pipeline in order to apply model selection. These are the parameters I have to deal with:\n",
+    "\n",
+    "- min_df and max_df in TfidfVectorizer\n",
+    "- n_components in TruncatedSVD\n",
+    "- n_clusters in KMeans, or eps and min_samples in DBSCAN"
    ]
   },
   {
