feat: first version of pipeline model selection

--- a/02_cvpr_2018/04_clustering_pipeline.ipynb
+++ b/02_cvpr_2018/04_clustering_pipeline.ipynb
@@ -163,6 +163,7 @@
    },
    "outputs": [],
    "source": [
+    "# Testing the pipeline\n",
     "df = get_papers()\n",
     "X_freq = build_bag_of_words(df, max_df = 0.7, min_df = 0.3)\n",
     "X_lsa = apply_lsa(X_freq, n_components = 15)\n",
@@ -173,6 +174,61 @@
     "print('Shilouette score dbscan: ' + str(shil_dbscan))\n",
     "plot_kmeans(X_embedded, kmeans)\n",
     "plot_dbscan(X_embedded, dbscan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Model selection's grid search discretisation and ranges\n",
+    "# Starting from a coarse grid\n",
+    "max_df_values = np.arange(0.7, 1, 0.1)\n",
+    "min_df_values = np.arange(0, 0.3, 0.1)\n",
+    "n_components_values = range(5, 50)\n",
+    "\n",
+    "k_values = range(2, 50)\n",
+    "\n",
+    "eps_values = np.arange(0.01, 3, 0.05)\n",
+    "min_samples_values = range(3,50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# K-means model selection\n",
+    "grid_search = [(max_df, min_df, n_components, k) \n",
+    "                 for max_df in max_df_values\n",
+    "                 for min_df in min_df_values\n",
+    "                 for n_components in n_components_values\n",
+    "                 for k in k_values]\n",
+    "print(len(grid_search))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = get_papers()\n",
+    "\n",
+    "best_shil = -1\n",
+    "best_model = None\n",
+    "\n",
+    "for i in tqdm(range(len(grid_search))):\n",
+    "    X_freq = build_bag_of_words(df, max_df = grid_search[i][0], min_df = grid_search[i][1])\n",
+    "    X_lsa = apply_lsa(X_freq, n_components = grid_search[i][2])\n",
+    "    X_embedded = apply_dimensionality_reduction(X_lsa)\n",
+    "    kmeans, shil_kmeans = kmeans_clustering(X_embedded, k = grid_search[i][3])\n",
+    "    \n",
+    "    if shil_kmeans > best_shil:\n",
+    "        best_shil = shil_kmeans\n",
+    "        best_model = kmeans"
    ]
   },
   {
