feat: parallelise the pipeline

--- a/02_cvpr_2018/04_clustering_pipeline.ipynb
+++ b/02_cvpr_2018/04_clustering_pipeline.ipynb
@@ -19,7 +19,9 @@
     "from sklearn.manifold import TSNE\n",
     "from sklearn.cluster import KMeans\n",
     "from sklearn.metrics import silhouette_samples, silhouette_score\n",
-    "from sklearn.cluster import DBSCAN"
+    "from sklearn.cluster import DBSCAN\n",
+    "\n",
+    "from joblib import Parallel, delayed"
    ]
   },
   {
@@ -184,11 +186,11 @@
    "source": [
     "# Model selection's grid search discretisation and ranges\n",
     "# Starting from a coarse grid\n",
-    "max_df_values = np.arange(0.7, 1, 0.1)\n",
-    "min_df_values = np.arange(0, 0.3, 0.1)\n",
-    "n_components_values = range(5, 50)\n",
+    "max_df_values = [0.7, 0.8]#np.arange(0.7, 1, 0.1)\n",
+    "min_df_values = [0.0, 0.1]#np.arange(0, 0.3, 0.1)\n",
+    "n_components_values = [5, 6]#range(5, 50)\n",
     "\n",
-    "k_values = range(2, 50)\n",
+    "k_values = [2, 3]#range(2, 50)\n",
     "\n",
     "eps_values = np.arange(0.01, 3, 0.05)\n",
     "min_samples_values = range(3,50)"
@@ -201,7 +203,8 @@
    "outputs": [],
    "source": [
     "# K-means model selection\n",
-    "grid_search = [(max_df, min_df, n_components, k) \n",
+    "df = get_papers()\n",
+    "grid_search = [(df, max_df, min_df, n_components, k) \n",
     "                 for max_df in max_df_values\n",
     "                 for min_df in min_df_values\n",
     "                 for n_components in n_components_values\n",
@@ -215,21 +218,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = get_papers()\n",
-    "\n",
-    "best_shil = -1\n",
-    "best_model = None\n",
-    "\n",
-    "for i in tqdm(range(len(grid_search))):\n",
-    "    X_freq = build_bag_of_words(df, max_df = grid_search[i][0], min_df = grid_search[i][1])\n",
-    "    X_lsa = apply_lsa(X_freq, n_components = grid_search[i][2])\n",
-    "    X_embedded = apply_dimensionality_reduction(X_lsa)\n",
-    "    kmeans, shil_kmeans = kmeans_clustering(X_embedded, k = grid_search[i][3])\n",
+    "def pipeline(input_data):\n",
+    "    df = input_data[0]\n",
+    "    max_df = input_data[1]\n",
+    "    min_df = input_data[2]\n",
+    "    n_components = input_data[3]\n",
+    "    k = input_data[4]\n",
     "    \n",
-    "    if shil_kmeans > best_shil:\n",
-    "        best_shil = shil_kmeans\n",
-    "        best_model = kmeans"
+    "    X_freq = build_bag_of_words(df, max_df = max_df, min_df = min_df)\n",
+    "    X_lsa = apply_lsa(X_freq, n_components = n_components)\n",
+    "    X_embedded = apply_dimensionality_reduction(X_lsa)\n",
+    "    kmeans, shil_kmeans = kmeans_clustering(X_embedded, k = k)\n",
+    "    return [shil_kmeans, kmeans, max_df, min_df, n_components, k]\n",
+    "    \n",
+    "results = Parallel(n_jobs=8)(delayed(pipeline)(gs) for gs in tqdm(grid_search))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO:\n",
+    "# Parallelise the code\n",
+    "# Random sampling in the parameters space - limit the number of iterations. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
