feat: finer granularity grid search.

--- a/02_cvpr_2018/04_clustering_pipeline.ipynb
+++ b/02_cvpr_2018/04_clustering_pipeline.ipynb
@@ -179,21 +179,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Applying model selection to k-means. Starting with a coarse grid given the number of hyparameters. I will refine by exploring the hyperpameters space at increasingly lower resolution levels"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Model selection's grid search discretisation and ranges\n",
-    "# Starting from a coarse grid\n",
-    "max_df_values = [0.7, 0.8]#np.arange(0.7, 1, 0.1)\n",
-    "min_df_values = [0.0, 0.1]#np.arange(0, 0.3, 0.1)\n",
-    "n_components_values = [5, 6]#range(5, 50)\n",
-    "\n",
-    "k_values = [2, 3]#range(2, 50)\n",
-    "\n",
-    "eps_values = np.arange(0.01, 3, 0.05)\n",
-    "min_samples_values = range(3,50)"
+    "max_df_values = np.arange(0.7, 1, 0.1)\n",
+    "min_df_values = np.arange(0, 0.3, 0.1)\n",
+    "n_components_values = range(5, 50, 10)\n",
+    "k_values = range(2, 50, 5)"
    ]
   },
   {
@@ -240,9 +241,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO:\n",
-    "# Parallelise the code\n",
-    "# Random sampling in the parameters space - limit the number of iterations. \n"
+    "# Which parameters have the highest influence in the final results?\n",
+    "results_df = pd.DataFrame([], columns = ['shil', 'max_df', 'min_df', 'n_components', 'k'])\n",
+    "for r in results:\n",
+    "    results_df.loc[len(results_df) + 1, :] = [r[0], r[2], r[3], r[4], r[5]]\n",
+    "for c in results_df.columns:\n",
+    "    results_df[c] = results_df[c].astype(float)\n",
+    "results_df.head()"
    ]
   },
   {
@@ -250,7 +255,90 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fig, ax = plt.subplots(2,2)\n",
+    "r = 0\n",
+    "c = 0\n",
+    "for col in results_df.columns[1:]:\n",
+    "    averages = results_df[[col, 'shil']].groupby(col).mean().sort_index()\n",
+    "    stds = results_df[[col, 'shil']].groupby(col).std().sort_index()\n",
+    "\n",
+    "    ax[r, c].plot(averages.index.values, averages.values)\n",
+    "    ax[r, c].fill_between(averages.index.values, \n",
+    "                    averages.values.flatten() - stds.values.flatten(),\n",
+    "                    averages.values.flatten() + stds.values.flatten(), \n",
+    "                    alpha = 0.5)\n",
+    "    ax[r, c].grid(True)\n",
+    "    ax[r, c].set_xlabel(col)\n",
+    "    ax[r, c].set_ylabel('shil')\n",
+    "    \n",
+    "    c = c + 1\n",
+    "    if c > 1:\n",
+    "        c = 0\n",
+    "        r = r + 1\n",
+    "fig.set_figwidth(16)\n",
+    "fig.set_figheight(6)\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see clear maxima in these plots, except in the case of the max_df parameter. Applying a higher resolution gridsearch using narrower ranges of hyperparameter values and smaller steps."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: this is repeated code - put it into functions\n",
+    "# TODO: checkpointing\n",
+    "max_df_values = np.arange(0.5, 0.7, 0.05)\n",
+    "min_df_values = np.arange(0.05, 0.15, 0.02)\n",
+    "n_components_values = range(21, 32, 2)\n",
+    "k_values = range(22, 32, 2)\n",
+    "\n",
+    "grid_search = [(df, max_df, min_df, n_components, k) \n",
+    "                 for max_df in max_df_values\n",
+    "                 for min_df in min_df_values\n",
+    "                 for n_components in n_components_values\n",
+    "                 for k in k_values]\n",
+    "\n",
+    "results = Parallel(n_jobs=8)(delayed(pipeline)(gs) for gs in tqdm(grid_search))\n",
+    "\n",
+    "results_df = pd.DataFrame([], columns = ['shil', 'max_df', 'min_df', 'n_components', 'k'])\n",
+    "for r in results:\n",
+    "    results_df.loc[len(results_df) + 1, :] = [r[0], r[2], r[3], r[4], r[5]]\n",
+    "for c in results_df.columns:\n",
+    "    results_df[c] = results_df[c].astype(float)\n",
+    "    \n",
+    "fig, ax = plt.subplots(2,2)\n",
+    "r = 0\n",
+    "c = 0\n",
+    "for col in results_df.columns[1:]:\n",
+    "    averages = results_df[[col, 'shil']].groupby(col).mean().sort_index()\n",
+    "    stds = results_df[[col, 'shil']].groupby(col).std().sort_index()\n",
+    "\n",
+    "    ax[r, c].plot(averages.index.values, averages.values)\n",
+    "    ax[r, c].fill_between(averages.index.values, \n",
+    "                    averages.values.flatten() - stds.values.flatten(),\n",
+    "                    averages.values.flatten() + stds.values.flatten(), \n",
+    "                    alpha = 0.5)\n",
+    "    ax[r, c].grid(True)\n",
+    "    ax[r, c].set_xlabel(col)\n",
+    "    ax[r, c].set_ylabel('shil')\n",
+    "    \n",
+    "    c = c + 1\n",
+    "    if c > 1:\n",
+    "        c = 0\n",
+    "        r = r + 1\n",
+    "fig.set_figwidth(16)\n",
+    "fig.set_figheight(6)\n",
+    "plt.tight_layout()"
+   ]
   },
   {
    "cell_type": "code",
