refactor: parametrised pipeline

--- a/02_cvpr_2018/04_clustering_pipeline.ipynb
+++ b/02_cvpr_2018/04_clustering_pipeline.ipynb
@@ -9,6 +9,7 @@
     "%matplotlib inline\n",
     "\n",
     "import glob\n",
+    "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -191,6 +192,81 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def grid_search_kmeans(max_df_values, \n",
+    "                       min_df_values, \n",
+    "                       n_components_values, \n",
+    "                       k_values,\n",
+    "                       output_file,\n",
+    "                       n_jobs = 8):\n",
+    "    if not os.path.exists(output_file):\n",
+    "        # Pipeline initialisation\n",
+    "        df = get_papers()\n",
+    "        def pipeline(input_data):\n",
+    "            df = input_data[0]\n",
+    "            max_df = input_data[1]\n",
+    "            min_df = input_data[2]\n",
+    "            n_components = input_data[3]\n",
+    "            k = input_data[4]\n",
+    "\n",
+    "            X_freq = build_bag_of_words(df, max_df = max_df, min_df = min_df)\n",
+    "            X_lsa = apply_lsa(X_freq, n_components = n_components)\n",
+    "            X_embedded = apply_dimensionality_reduction(X_lsa)\n",
+    "            kmeans, shil_kmeans = kmeans_clustering(X_embedded, k = k)\n",
+    "            return [shil_kmeans, kmeans, max_df, min_df, n_components, k]\n",
+    "        \n",
+    "        # Building the grid search space\n",
+    "        grid_search = [(df, max_df, min_df, n_components, k) \n",
+    "                         for max_df in max_df_values\n",
+    "                         for min_df in min_df_values\n",
+    "                         for n_components in n_components_values\n",
+    "                         for k in k_values]\n",
+    "\n",
+    "        # Running the pipeline for all the elements in the grid search space\n",
+    "        results = Parallel(n_jobs=n_jobs)(delayed(pipeline)(gs) for gs in tqdm(grid_search))\n",
+    "\n",
+    "        # Processing the results data\n",
+    "        results_df = pd.DataFrame([], columns = ['shil', 'max_df', 'min_df', 'n_components', 'k'])\n",
+    "        for r in results:\n",
+    "            results_df.loc[len(results_df) + 1, :] = [r[0], r[2], r[3], r[4], r[5]]\n",
+    "        for c in results_df.columns:\n",
+    "            results_df[c] = results_df[c].astype(float)\n",
+    "        results_df.to_csv(output_file)\n",
+    "    else:\n",
+    "        results_df = pd.read_csv(output_file, index_col=[0])\n",
+    "\n",
+    "    # Plotting the results\n",
+    "    fig, ax = plt.subplots(2,2)\n",
+    "    r = 0\n",
+    "    c = 0\n",
+    "    for col in results_df.columns[1:]:\n",
+    "        averages = results_df[[col, 'shil']].groupby(col).mean().sort_index()\n",
+    "        stds = results_df[[col, 'shil']].groupby(col).std().sort_index()\n",
+    "\n",
+    "        ax[r, c].plot(averages.index.values, averages.values)\n",
+    "        ax[r, c].fill_between(averages.index.values, \n",
+    "                        averages.values.flatten() - stds.values.flatten(),\n",
+    "                        averages.values.flatten() + stds.values.flatten(), \n",
+    "                        alpha = 0.5)\n",
+    "        ax[r, c].grid(True)\n",
+    "        ax[r, c].set_xlabel(col)\n",
+    "        ax[r, c].set_ylabel('shil')\n",
+    "\n",
+    "        c = c + 1\n",
+    "        if c > 1:\n",
+    "            c = 0\n",
+    "            r = r + 1\n",
+    "    fig.set_figwidth(16)\n",
+    "    fig.set_figheight(6)\n",
+    "    plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# K-means: coarse model selection\n",
     "max_df_values = np.arange(0.7, 1, 0.1)\n",
     "min_df_values = np.arange(0, 0.3, 0.1)\n",
     "n_components_values = range(5, 50, 10)\n",
@@ -203,82 +279,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# K-means model selection\n",
-    "df = get_papers()\n",
-    "grid_search = [(df, max_df, min_df, n_components, k) \n",
-    "                 for max_df in max_df_values\n",
-    "                 for min_df in min_df_values\n",
-    "                 for n_components in n_components_values\n",
-    "                 for k in k_values]\n",
-    "print(len(grid_search))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def pipeline(input_data):\n",
-    "    df = input_data[0]\n",
-    "    max_df = input_data[1]\n",
-    "    min_df = input_data[2]\n",
-    "    n_components = input_data[3]\n",
-    "    k = input_data[4]\n",
-    "    \n",
-    "    X_freq = build_bag_of_words(df, max_df = max_df, min_df = min_df)\n",
-    "    X_lsa = apply_lsa(X_freq, n_components = n_components)\n",
-    "    X_embedded = apply_dimensionality_reduction(X_lsa)\n",
-    "    kmeans, shil_kmeans = kmeans_clustering(X_embedded, k = k)\n",
-    "    return [shil_kmeans, kmeans, max_df, min_df, n_components, k]\n",
-    "    \n",
-    "results = Parallel(n_jobs=8)(delayed(pipeline)(gs) for gs in tqdm(grid_search))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Which parameters have the highest influence in the final results?\n",
-    "results_df = pd.DataFrame([], columns = ['shil', 'max_df', 'min_df', 'n_components', 'k'])\n",
-    "for r in results:\n",
-    "    results_df.loc[len(results_df) + 1, :] = [r[0], r[2], r[3], r[4], r[5]]\n",
-    "for c in results_df.columns:\n",
-    "    results_df[c] = results_df[c].astype(float)\n",
-    "results_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots(2,2)\n",
-    "r = 0\n",
-    "c = 0\n",
-    "for col in results_df.columns[1:]:\n",
-    "    averages = results_df[[col, 'shil']].groupby(col).mean().sort_index()\n",
-    "    stds = results_df[[col, 'shil']].groupby(col).std().sort_index()\n",
-    "\n",
-    "    ax[r, c].plot(averages.index.values, averages.values)\n",
-    "    ax[r, c].fill_between(averages.index.values, \n",
-    "                    averages.values.flatten() - stds.values.flatten(),\n",
-    "                    averages.values.flatten() + stds.values.flatten(), \n",
-    "                    alpha = 0.5)\n",
-    "    ax[r, c].grid(True)\n",
-    "    ax[r, c].set_xlabel(col)\n",
-    "    ax[r, c].set_ylabel('shil')\n",
-    "    \n",
-    "    c = c + 1\n",
-    "    if c > 1:\n",
-    "        c = 0\n",
-    "        r = r + 1\n",
-    "fig.set_figwidth(16)\n",
-    "fig.set_figheight(6)\n",
-    "plt.tight_layout()"
+    "grid_search_kmeans(max_df_values, \n",
+    "                       min_df_values, \n",
+    "                       n_components_values, \n",
+    "                       k_values,\n",
+    "                       'checkpoints/coarse.csv')"
    ]
   },
   {
@@ -294,50 +299,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: this is repeated code - put it into functions\n",
-    "# TODO: checkpointing\n",
     "max_df_values = np.arange(0.5, 0.7, 0.05)\n",
     "min_df_values = np.arange(0.05, 0.15, 0.02)\n",
     "n_components_values = range(21, 32, 2)\n",
     "k_values = range(22, 32, 2)\n",
     "\n",
-    "grid_search = [(df, max_df, min_df, n_components, k) \n",
-    "                 for max_df in max_df_values\n",
-    "                 for min_df in min_df_values\n",
-    "                 for n_components in n_components_values\n",
-    "                 for k in k_values]\n",
-    "\n",
-    "results = Parallel(n_jobs=8)(delayed(pipeline)(gs) for gs in tqdm(grid_search))\n",
-    "\n",
-    "results_df = pd.DataFrame([], columns = ['shil', 'max_df', 'min_df', 'n_components', 'k'])\n",
-    "for r in results:\n",
-    "    results_df.loc[len(results_df) + 1, :] = [r[0], r[2], r[3], r[4], r[5]]\n",
-    "for c in results_df.columns:\n",
-    "    results_df[c] = results_df[c].astype(float)\n",
-    "    \n",
-    "fig, ax = plt.subplots(2,2)\n",
-    "r = 0\n",
-    "c = 0\n",
-    "for col in results_df.columns[1:]:\n",
-    "    averages = results_df[[col, 'shil']].groupby(col).mean().sort_index()\n",
-    "    stds = results_df[[col, 'shil']].groupby(col).std().sort_index()\n",
-    "\n",
-    "    ax[r, c].plot(averages.index.values, averages.values)\n",
-    "    ax[r, c].fill_between(averages.index.values, \n",
-    "                    averages.values.flatten() - stds.values.flatten(),\n",
-    "                    averages.values.flatten() + stds.values.flatten(), \n",
-    "                    alpha = 0.5)\n",
-    "    ax[r, c].grid(True)\n",
-    "    ax[r, c].set_xlabel(col)\n",
-    "    ax[r, c].set_ylabel('shil')\n",
-    "    \n",
-    "    c = c + 1\n",
-    "    if c > 1:\n",
-    "        c = 0\n",
-    "        r = r + 1\n",
-    "fig.set_figwidth(16)\n",
-    "fig.set_figheight(6)\n",
-    "plt.tight_layout()"
+    "grid_search_kmeans(max_df_values, \n",
+    "                       min_df_values, \n",
+    "                       n_components_values, \n",
+    "                       k_values,\n",
+    "                       'checkpoints/fine.csv')"
    ]
   },
   {
